--- a/app/views/clubs/show.haml
+++ b/app/views/clubs/show.haml
@@ -20,4 +20,4 @@
 					= link_to team do
 						.panel-gray
 							%div= "#{team.name}"
-							%small= "#{team.league.name} - #{team.level.name} - #{team.group.name} - #{team.category.name} ".upcase
+							%small= "#{team.league.name} - #{team.level.name} - #{team.category.name} - #{team.division.name} - #{team.group.name}".upcase
