--- a/app/views/teams/show.haml
+++ b/app/views/teams/show.haml
@@ -4,7 +4,7 @@
 			.col
 				.card-title= @team.name
 				.card-subtitle= link_to @team.club.name, @team.club
-				.card-text= "#{@team.league.name} - #{@team.level.name} - #{@team.group.name} - #{@team.category.name} ".upcase
+				.card-text= "#{@team.league.name} - #{@team.level.name} - #{@team.category.name} - #{@team.division.name} - #{@team.group.name}".upcase
 
 		.row.mb-0
 			.col
